--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:headless": "HEADLESS=true ng test --watch=false",
+    "test:ci": "NODE_ENV=ci ng test --watch=false --browsers=ChromeCI",
+    "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage"
   },
   "prettier": {
     "printWidth": 100,
@@ -47,6 +50,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "less": "^4.2.0",
+    "puppeteer": "^24.17.0",
     "typescript": "~5.9.2"
   }
 }
