--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     ]
   },
   "private": true,
+  "engines": {
+    "node": "21.x.x",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
