--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,17 @@ backend:
   phases:
     build:
       commands:
+        - nvm use $VERSION_NODE_21
         - npm ci --cache .npm --prefer-offline
 frontend:
   phases:
     preBuild:
       commands:
+        - nvm use $VERSION_NODE_24
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
+        - nvm use $VERSION_NODE_24
         - npm run build
   artifacts:
     baseDirectory: dist/docflow4
@@ -22,5 +25,5 @@ frontend:
       - node_modules/**/*
 env:
   variables:
-    NODE_VERSION: '21'
+    NODE_VERSION: $VERSION_NODE_24
     _LIVE_UPDATES: '[{"name":"Amplify CLI","pkg":"@aws-amplify/cli","type":"npm","version":"latest"}]'
