--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "private": true,
   "engines": {
-    "node": "24.x.x",
+    "node": "24.5.0",
     "npm": ">=10.0.0"
   },
   "dependencies": {
