--- a/amplify.yml
+++ b/amplify.yml
@@ -3,16 +3,19 @@ backend:
   phases:
     build:
       commands:
+        - nvm install 24.5.0
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
 frontend:
   phases:
     preBuild:
       commands:
+        - nvm install 24.5.0
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
+        - nvm install 24.5.0
         - nvm use 24.5.0
         - npm run build
   artifacts:
