--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
+    "build:purge": "ng build --configuration production && npm run purge:css",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:headless": "HEADLESS=true ng test --watch=false",
     "test:ci": "NODE_ENV=ci ng test --watch=false --browsers=ChromeCI",
-    "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage"
+    "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage",
+    "purge:css": "purgecss --config purgecss.config.js --output dist/docflow4/browser/",
+    "purge:analyze": "purgecss --config purgecss.config.js --output dist/purged/",
+    "css:analyze": "echo 'Analyzing CSS bundle sizes...' && find src -name '*.less' -exec wc -c {} + | sort -n",
+    "css:optimize": "node optimize-css.js",
+    "css:restore": "find src -name '*.backup' -exec sh -c 'mv \"$1\" \"${1%.backup}\"' _ {} \\;"
   },
   "prettier": {
     "printWidth": 100,
@@ -55,6 +61,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "less": "^4.4.1",
     "puppeteer": "^24.17.0",
+    "purgecss": "^7.0.2",
     "typescript": "~5.9.2"
   }
 }
