--- a/amplify.yml
+++ b/amplify.yml
@@ -13,6 +13,58 @@ frontend:
         - nvm install 24.5.0
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
+    test:
+      commands:
+        - echo "🧪 Running test suite before deployment..."
+        - nvm use 24.5.0
+        # Run Angular unit tests
+        - echo "📋 Running Angular unit tests..."
+        - npm run test:headless || { echo "❌ Angular unit tests failed"; exit 1; }
+        - echo "✅ Angular unit tests passed"
+        # Install Playwright for e2e tests (lighter than Cypress for CI)
+        - echo "🎭 Installing Playwright for e2e tests..."
+        - npx playwright install chromium
+        # Start development server in background for e2e tests
+        - echo "🚀 Starting development server for e2e tests..."
+        - npm start &
+        - SERVER_PID=$!
+        - echo "Server PID: $SERVER_PID"
+        # Wait for server to be ready
+        - echo "⏳ Waiting for development server to start..."
+        - npx wait-on http://localhost:4200 --timeout 60000 || { echo "❌ Development server failed to start"; kill $SERVER_PID; exit 1; }
+        # Run authentication redirect tests (proven working)
+        - echo "🔐 Running authentication redirect tests..."
+        - node test-auth-redirect.js || { echo "❌ Authentication redirect test failed"; kill $SERVER_PID; exit 1; }
+        - echo "✅ Authentication redirect tests passed"
+        # Run authentication implementation tests
+        - echo "🔐 Running authentication implementation tests..."
+        - node tests/test-auth-implementation.js || { echo "❌ Auth implementation test failed"; kill $SERVER_PID; exit 1; }
+        - echo "✅ Authentication implementation tests passed"
+        # Run domain lifecycle tests (100% success rate)
+        - echo "🏷️ Running domain lifecycle tests..."
+        - node tests/test-domain-lifecycle.js || { echo "❌ Domain lifecycle test failed"; kill $SERVER_PID; exit 1; }
+        - echo "✅ Domain lifecycle tests passed"
+        # Run status and counts tests (100% success rate)
+        - echo "📊 Running default status and counts tests..."
+        - node tests/test-default-status-and-counts.js || { echo "❌ Status and counts test failed"; kill $SERVER_PID; exit 1; }
+        - echo "✅ Status and counts tests passed"
+        # Run additional critical tests
+        - echo "🧪 Running additional critical tests..."
+        - node tests/test-confirmation-form.js || { echo "❌ Confirmation form test failed"; kill $SERVER_PID; exit 1; }
+        - node tests/test-search-focus.js || { echo "❌ Search focus test failed"; kill $SERVER_PID; exit 1; }
+        - node tests/test-user-type-visibility.js || { echo "❌ User type visibility test failed"; kill $SERVER_PID; exit 1; }
+        - node tests/test-domain-change.js || { echo "❌ Domain change test failed"; kill $SERVER_PID; exit 1; }
+        - node tests/test-domain-selection.js || { echo "❌ Domain selection test failed"; kill $SERVER_PID; exit 1; }
+        - node tests/test-optional-domains.js || { echo "❌ Optional domains test failed"; kill $SERVER_PID; exit 1; }
+        - echo "✅ Additional critical tests passed"
+        # Generate test report summary
+        - echo "📊 Generating test report summary..."
+        - node generate-test-report.js || echo "⚠️ Report generation completed with warnings"
+        - echo "✅ Test report generated"
+        # Stop development server
+        - echo "🛑 Stopping development server..."
+        - kill $SERVER_PID || true
+        - echo "✅ All tests completed successfully! (10 test suites executed)"
     build:
       commands:
         - nvm install 24.5.0
