--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
     "test:headless": "HEADLESS=true ng test --watch=false",
     "test:ci": "NODE_ENV=ci ng test --watch=false --browsers=ChromeCI",
     "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage",
+    "test:all": "npm run test:headless && npm run test:e2e",
+    "test:e2e": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run test:node-scripts && npm run test:report && kill $SERVER_PID",
+    "test:node-scripts": "node test-auth-redirect.js && node tests/test-auth-implementation.js && node tests/test-domain-lifecycle.js && node tests/test-default-status-and-counts.js && node tests/test-confirmation-form.js && node tests/test-search-focus.js && node tests/test-user-type-visibility.js && node tests/test-domain-change.js && node tests/test-domain-selection.js && node tests/test-optional-domains.js",
+    "test:cypress": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
+    "test:cypress:headless": "cypress run --headless",
+    "test:cypress:open": "cypress open",
+    "cypress:run": "cypress run --headless --reporter mochawesome --reporter-options reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss",
+    "test:report": "node generate-test-report.js",
+    "test:scripts": "node tests/test-auth-implementation.js && node tests/test-confirmation-form.js && node tests/test-search-focus.js && node tests/test-user-type-visibility.js && node tests/test-domain-lifecycle.js && node tests/test-domain-change.js && node tests/test-domain-selection.js && node tests/test-domain-selection-simple.js && node tests/test-domain-update-fix.js && node tests/test-optional-domains.js && node tests/test-default-status-and-counts.js && node tests/test-headless-demo.js && node tests/test-headless-domain-selection.js && node tests/test-headless-user-type.js && node tests/test-headless-with-auth.js && node tests/test-manual-behavior.js",
     "purge:css": "purgecss --config purgecss.config.js --output dist/docflow4/browser/",
     "purge:analyze": "purgecss --config purgecss.config.js --output dist/purged/",
     "css:analyze": "echo 'Analyzing CSS bundle sizes...' && find src -name '*.less' -exec wc -c {} + | sort -n",
@@ -52,7 +61,9 @@
     "@angular/compiler-cli": "^20.2.1",
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
+    "@playwright/test": "^1.55.0",
     "@types/jasmine": "~5.1.9",
+    "cypress": "^15.0.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -60,8 +71,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "less": "^4.4.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "puppeteer": "^24.17.0",
     "purgecss": "^7.0.2",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "wait-on": "^8.0.4"
   }
 }
