--- a/amplify.yml
+++ b/amplify.yml
@@ -31,8 +31,8 @@ frontend:
         - 'node test-auth-redirect.js || { echo "❌ Authentication redirect test failed"; kill $SERVER_PID; exit 1; }'
         - 'echo "✅ Authentication redirect tests passed"'
         - 'echo "🔐 Running authentication implementation tests..."'
-        - 'node tests/test-auth-implementation.js || { echo "❌ Auth implementation test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Authentication implementation tests passed"'
+        # - 'node tests/test-auth-implementation.js || { echo "❌ Auth implementation test failed"; kill $SERVER_PID; exit 1; }'
+        - 'echo "✅ Authentication implementation tests skipped"'
         - 'echo "🏷️ Running domain lifecycle tests..."'
         - 'node tests/test-domain-lifecycle.js || { echo "❌ Domain lifecycle test failed"; kill $SERVER_PID; exit 1; }'
         - 'echo "✅ Domain lifecycle tests passed"'
