--- a/amplify.yml
+++ b/amplify.yml
@@ -41,7 +41,7 @@ frontend:
         - 'echo "✅ Status and counts tests passed"'
         - 'echo "🧪 Running additional critical tests..."'
         - 'node tests/test-confirmation-form.js || { echo "❌ Confirmation form test failed"; kill $SERVER_PID; exit 1; }'
-        - 'node tests/test-search-focus.js || { echo "❌ Search focus test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'node tests/test-search-focus.js || { echo "❌ Search focus test failed"; kill $SERVER_PID; exit 1; }'
         - 'node tests/test-user-type-visibility.js || { echo "❌ User type visibility test failed"; kill $SERVER_PID; exit 1; }'
         - 'node tests/test-domain-change.js || { echo "❌ Domain change test failed"; kill $SERVER_PID; exit 1; }'
         - 'node tests/test-domain-selection.js || { echo "❌ Domain selection test failed"; kill $SERVER_PID; exit 1; }'
