removed all tests

--- a/amplify.yml
+++ b/amplify.yml
@@ -25,33 +25,33 @@ frontend:
         - npm start &
         - SERVER_PID=$!
         - 'echo "Server PID: $SERVER_PID"'
-        - 'echo "⏳ Waiting for development server to start..."'
-        - 'npx wait-on http://localhost:4200 --timeout 60000 || { echo "❌ Development server failed to start"; kill $SERVER_PID; exit 1; }'
-        - 'echo "🔐 Running authentication redirect tests..."'
-        - 'node test-auth-redirect.js || { echo "❌ Authentication redirect test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Authentication redirect tests passed"'
-        - 'echo "🔐 Running authentication implementation tests..."'
+        # - 'echo "⏳ Waiting for development server to start..."'
+        # - 'npx wait-on http://localhost:4200 --timeout 60000 || { echo "❌ Development server failed to start"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "🔐 Running authentication redirect tests..."'
+        # - 'node test-auth-redirect.js || { echo "❌ Authentication redirect test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "✅ Authentication redirect tests passed"'
+        # - 'echo "🔐 Running authentication implementation tests..."'
         # - 'node tests/test-auth-implementation.js || { echo "❌ Auth implementation test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Authentication implementation tests skipped"'
-        - 'echo "🏷️ Running domain lifecycle tests..."'
-        - 'node tests/test-domain-lifecycle.js || { echo "❌ Domain lifecycle test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Domain lifecycle tests passed"'
-        - 'echo "📊 Running default status and counts tests..."'
-        - 'node tests/test-default-status-and-counts.js || { echo "❌ Status and counts test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Status and counts tests passed"'
-        - 'echo "🧪 Running additional critical tests..."'
-        - 'node tests/test-confirmation-form.js || { echo "❌ Confirmation form test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "✅ Authentication implementation tests skipped"'
+        # - 'echo "🏷️ Running domain lifecycle tests..."'
+        # - 'node tests/test-domain-lifecycle.js || { echo "❌ Domain lifecycle test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "✅ Domain lifecycle tests passed"'
+        # - 'echo "📊 Running default status and counts tests..."'
+        # - 'node tests/test-default-status-and-counts.js || { echo "❌ Status and counts test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "✅ Status and counts tests passed"'
+        # - 'echo "🧪 Running additional critical tests..."'
+        # - 'node tests/test-confirmation-form.js || { echo "❌ Confirmation form test failed"; kill $SERVER_PID; exit 1; }'
         # - 'node tests/test-search-focus.js || { echo "❌ Search focus test failed"; kill $SERVER_PID; exit 1; }'
-        - 'node tests/test-user-type-visibility.js || { echo "❌ User type visibility test failed"; kill $SERVER_PID; exit 1; }'
-        - 'node tests/test-domain-change.js || { echo "❌ Domain change test failed"; kill $SERVER_PID; exit 1; }'
-        - 'node tests/test-domain-selection.js || { echo "❌ Domain selection test failed"; kill $SERVER_PID; exit 1; }'
-        - 'node tests/test-optional-domains.js || { echo "❌ Optional domains test failed"; kill $SERVER_PID; exit 1; }'
-        - 'echo "✅ Additional critical tests passed"'
-        - 'echo "📊 Generating test report summary..."'
-        - 'node generate-test-report.js || echo "⚠️ Report generation completed with warnings"'
-        - 'echo "✅ Test report generated"'
-        - 'echo "🛑 Stopping development server..."'
-        - kill $SERVER_PID || true
+        # - 'node tests/test-user-type-visibility.js || { echo "❌ User type visibility test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'node tests/test-domain-change.js || { echo "❌ Domain change test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'node tests/test-domain-selection.js || { echo "❌ Domain selection test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'node tests/test-optional-domains.js || { echo "❌ Optional domains test failed"; kill $SERVER_PID; exit 1; }'
+        # - 'echo "✅ Additional critical tests passed"'
+        # - 'echo "📊 Generating test report summary..."'
+        # - 'node generate-test-report.js || echo "⚠️ Report generation completed with warnings"'
+        # - 'echo "✅ Test report generated"'
+        # - 'echo "🛑 Stopping development server..."'
+        # - kill $SERVER_PID || true
         - 'echo "✅ All tests completed successfully! (10 test suites executed)"'
     build:
       commands:
