--- a/amplify.yml
+++ b/amplify.yml
@@ -1,11 +1,16 @@
 version: 1
 backend:
   phases:
+    preBuild:
+      commands:
+        - amplify pull --appId $AWS_APP_ID --envName $AWS_BRANCH --yes
     build:
       commands:
         - nvm install 24.5.0
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --env-name $AWS_ENV_NAME
+        - npm ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID --dest amplify_outputs.json
 frontend:
   phases:
     preBuild:
