--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ backend:
         - nvm install 24.5.0
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --env-name $AWS_ENV_NAME
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
         - npm ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID --dest amplify_outputs.json
 frontend:
   phases:
