--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ backend:
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
-        - npm ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID --dest amplify_outputs.json
+        - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID --dest amplify_outputs.json
 frontend:
   phases:
     preBuild:
