--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:all": "npm run test:headless && npm run test:e2e",
     "test:e2e": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run test:node-scripts && npm run test:report && kill $SERVER_PID",
     "test:node-scripts": "node test-auth-redirect.js && node tests/test-auth-implementation.js && node tests/test-domain-lifecycle.js && node tests/test-default-status-and-counts.js && node tests/test-confirmation-form.js && node tests/test-search-focus.js && node tests/test-user-type-visibility.js && node tests/test-domain-change.js && node tests/test-domain-selection.js && node tests/test-optional-domains.js",
+    "test:reset-code": "node tests/test-send-reset-code-simple.js",
+    "test:reset-code-full": "node tests/test-send-reset-code.js",
     "test:cypress": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
     "test:cypress:headless": "cypress run --headless",
     "test:cypress:open": "cypress open",
@@ -51,6 +53,9 @@
     "@angular/forms": "^20.2.1",
     "@angular/platform-browser": "^20.2.1",
     "@angular/router": "^20.2.1",
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.873.0",
+    "@aws-sdk/client-dynamodb": "^3.873.0",
+    "@aws-sdk/lib-dynamodb": "^3.873.0",
     "aws-amplify": "^6.15.5",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
