--- a/amplify.yml
+++ b/amplify.yml
@@ -16,7 +16,7 @@ frontend:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
-        - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
+        # - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
     test:
       commands:
         - nvm use 24.5.0
