fixed table names

--- a/.env
+++ b/.env
@@ -2,6 +2,11 @@
 # This ensures consistent table naming across all resources
 ENV=dev001
 AMPLIFY_BRANCH=dev001
+CDK_DEFAULT_ENV=dev001
+
+# AWS Amplify specific environment variables
+AMPLIFY_ENVIRONMENT_NAME=dev001
+AMPLIFY_BACKEND_NAME=dev001
 
 # App configuration
 APP_NAME=docflow4
