--- a/amplify.yml
+++ b/amplify.yml
@@ -4,11 +4,19 @@ backend:
     preBuild:
       commands:
         - echo "🔄 Pulling latest backend environment configuration..."
+        - echo "🎯 Current AWS_BRANCH: $AWS_BRANCH"
+        - export ENV=$AWS_BRANCH
+        - export AMPLIFY_BRANCH=$AWS_BRANCH
+        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
     build:
       commands:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
+        - export ENV=$AWS_BRANCH
+        - export AMPLIFY_BRANCH=$AWS_BRANCH
+        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
+        - echo "🏗️ Building with ENV=$ENV, AMPLIFY_BRANCH=$AMPLIFY_BRANCH"
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
@@ -17,6 +25,9 @@ frontend:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
+        - export ENV=$AWS_BRANCH
+        - export AMPLIFY_BRANCH=$AWS_BRANCH
+        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
         - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
     test:
       commands:
@@ -26,6 +37,10 @@ frontend:
       commands:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
+        - export ENV=$AWS_BRANCH
+        - export AMPLIFY_BRANCH=$AWS_BRANCH
+        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
+        - echo "🔨 Frontend build with ENV=$ENV"
         - npm run build
   artifacts:
     baseDirectory: dist/docflow4/browser
