--- a/amplify.yml
+++ b/amplify.yml
@@ -4,18 +4,12 @@ backend:
     preBuild:
       commands:
         - 'echo "🔄 Pulling latest backend environment configuration..."'
-        - 'echo "🎯 Current AWS_BRANCH: $AWS_BRANCH"'
-        - export ENV=$AWS_BRANCH
-        - export AMPLIFY_BRANCH=$AWS_BRANCH
-        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
+        - 'echo "🎯 Current AWS_BRANCH: $AWS_BRANCH, ENV: $ENV"'
     build:
       commands:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
-        - export ENV=$AWS_BRANCH
-        - export AMPLIFY_BRANCH=$AWS_BRANCH
-        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
         - 'echo "🏗️ Building with ENV=$ENV, AMPLIFY_BRANCH=$AMPLIFY_BRANCH"'
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
@@ -25,9 +19,7 @@ frontend:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
-        - export ENV=$AWS_BRANCH
-        - export AMPLIFY_BRANCH=$AWS_BRANCH
-        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
+        - 'echo "📦 Frontend pre-build with ENV=$ENV"'
         - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
     test:
       commands:
@@ -37,9 +29,6 @@ frontend:
       commands:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
-        - export ENV=$AWS_BRANCH
-        - export AMPLIFY_BRANCH=$AWS_BRANCH
-        - export AMPLIFY_ENVIRONMENT_NAME=$AWS_BRANCH
         - 'echo "🔨 Frontend build with ENV=$ENV"'
         - npm run build
   artifacts:
@@ -54,3 +43,6 @@ env:
   variables:
     NODE_VERSION: 24.5.0
     _LIVE_UPDATES: '[{"name":"Amplify CLI","pkg":"@aws-amplify/cli","type":"npm","version":"latest"}]'
+    ENV: $AWS_BRANCH
+    AMPLIFY_BRANCH: $AWS_BRANCH
+    AMPLIFY_ENVIRONMENT_NAME: $AWS_BRANCH
