--- a/amplify.yml
+++ b/amplify.yml
@@ -4,13 +4,13 @@ backend:
     preBuild:
       commands:
         - 'echo "🔄 Pulling latest backend environment configuration..."'
-        - 'echo "🎯 Current AWS_BRANCH: $AWS_BRANCH, ENV: $ENV"'
+        - 'echo "🎯 Current AWS_BRANCH: $AWS_BRANCH"'
     build:
       commands:
         - nvm install 24.5.0 --no-progress
         - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
-        - 'echo "🏗️ Building with ENV=$ENV, AMPLIFY_BRANCH=$AMPLIFY_BRANCH"'
+        - 'echo "🏗️ Building with AMPLIFY_BRANCH=$AMPLIFY_BRANCH"'
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
