--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docflow4",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,8 +13,8 @@
     "test:ci-smart": "node run-ci-tests.js",
     "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage",
     "test:all": "npm run test:headless && npm run test:e2e",
-    "test:e2e": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run test:node-scripts && npm run test:report && kill $SERVER_PID",
-    "test:node-scripts": "node test-auth-redirect.js && node tests/test-auth-implementation.js && node tests/test-domain-lifecycle.js && node tests/test-default-status-and-counts.js && node tests/test-confirmation-form.js && node tests/test-search-focus.js && node tests/test-user-type-visibility.js && node tests/test-domain-change.js && node tests/test-domain-selection.js && node tests/test-optional-domains.js",
+    "test:e2e": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
+    "test:node-scripts": "echo 'Node.js tests converted to Cypress - use npm run test:cypress instead'",
     "test:reset-code": "node tests/test-send-reset-code-simple.js",
     "test:reset-code-full": "node tests/test-send-reset-code.js",
     "test:cypress": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
@@ -22,7 +22,7 @@
     "test:cypress:open": "cypress open",
     "cypress:run": "cypress run --headless --reporter mochawesome --reporter-options reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss",
     "test:report": "node generate-test-report.js",
-    "test:scripts": "node tests/test-auth-implementation.js && node tests/test-confirmation-form.js && node tests/test-search-focus.js && node tests/test-user-type-visibility.js && node tests/test-domain-lifecycle.js && node tests/test-domain-change.js && node tests/test-domain-selection.js && node tests/test-domain-selection-simple.js && node tests/test-domain-update-fix.js && node tests/test-optional-domains.js && node tests/test-default-status-and-counts.js && node tests/test-headless-demo.js && node tests/test-headless-domain-selection.js && node tests/test-headless-user-type.js && node tests/test-headless-with-auth.js && node tests/test-manual-behavior.js",
+    "test:scripts": "echo 'Node.js tests converted to Cypress - use npm run test:cypress instead'",
     "purge:css": "purgecss --config purgecss.config.js --output dist/docflow4/browser/",
     "purge:analyze": "purgecss --config purgecss.config.js --output dist/purged/",
     "css:analyze": "echo 'Analyzing CSS bundle sizes...' && find src -name '*.less' -exec wc -c {} + | sort -n",
