--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/platform-browser": "^20.2.1",
     "@angular/router": "^20.2.1",
     "@aws-sdk/client-apigatewaymanagementapi": "^3.873.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.879.0",
     "@aws-sdk/client-dynamodb": "^3.873.0",
     "@aws-sdk/lib-dynamodb": "^3.873.0",
     "aws-amplify": "^6.15.5",
