--- a/amplify.yml
+++ b/amplify.yml
@@ -12,6 +12,31 @@ backend:
         - npm ci --cache .npm --prefer-offline
         - 'echo "🏗️ Building with AMPLIFY_BRANCH=$AMPLIFY_BRANCH"'
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+test:
+  phases:
+    preTest:
+      commands:
+        - npm ci
+        - npm install -g pm2
+        - npm install -g wait-on
+        - npm install mocha mochawesome mochawesome-merge mochawesome-report-generator
+        - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
+        - node scripts/create-test-users.js
+        - pm2 start npm -- start
+        - wait-on http://localhost:4200
+    test:
+      commands:
+        - 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
+    postTest:
+      commands:
+        - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
+        - pm2 kill
+  artifacts:
+    baseDirectory: cypress
+    configFilePath: '**/mochawesome.json'
+    files:
+      - '**/*.png'
+      - '**/*.mp4'
 frontend:
   phases:
     preBuild:
