--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "test:ci": "NODE_ENV=ci ng test --watch=false --browsers=ChromeCI",
     "test:ci-smart": "node run-ci-tests.js",
     "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage",
-    "test:all": "npm run test:headless && npm run test:e2e",
-    "test:e2e": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
+    "test:all": "node scripts/create-test-users.js && npm run test:headless && npm run test:e2e",
+    "test:e2e": "npm install mocha mochawesome mochawesome-merge mochawesome-report-generator && node scripts/create-test-users.js && npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npx cypress run --reporter mochawesome --reporter-options \"reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss\" && npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json && kill $SERVER_PID",
     "test:node-scripts": "echo 'Node.js tests converted to Cypress - use npm run test:cypress instead'",
     "test:reset-code": "node tests/test-send-reset-code-simple.js",
     "test:reset-code-full": "node tests/test-send-reset-code.js",
-    "test:cypress": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npm run cypress:run && npm run test:report && kill $SERVER_PID",
+    "test:cypress": "npm install mocha mochawesome mochawesome-merge mochawesome-report-generator && node scripts/create-test-users.js && npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npx cypress run --reporter mochawesome --reporter-options \"reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss\" && npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json && kill $SERVER_PID",
     "test:cypress:headless": "cypress run --headless",
     "test:cypress:open": "cypress open",
     "cypress:run": "cypress run --headless --reporter mochawesome --reporter-options reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss",
@@ -58,6 +58,7 @@
     "@aws-sdk/client-dynamodb": "^3.873.0",
     "@aws-sdk/lib-dynamodb": "^3.873.0",
     "aws-amplify": "^6.15.5",
+    "mocha": "^11.7.2",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
