--- a/amplify.yml
+++ b/amplify.yml
@@ -16,6 +16,8 @@ test:
   phases:
     preTest:
       commands:
+        - nvm install 24.5.0 --no-progress
+        - nvm use 24.5.0
         - npm ci --cache .npm --prefer-offline
         - npm install -g pm2
         - npm install -g wait-on
