--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ CDK_DEFAULT_ENV=dev001
 # AWS Amplify specific environment variables
 AMPLIFY_ENVIRONMENT_NAME=dev001
 AMPLIFY_BACKEND_NAME=dev001
+AWS_PROFILE=docflow4
 
 # App configuration
 APP_NAME=docflow4
