--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "test:ci": "NODE_ENV=ci ng test --watch=false --browsers=ChromeCI",
     "test:ci-smart": "node run-ci-tests.js",
     "test:coverage": "HEADLESS=true ng test --watch=false --code-coverage",
-    "test:all": "node scripts/create-test-users.js && npm run test:headless && npm run test:e2e",
+    "test:all": "node scripts/create-test-users.js && npm run test:coverage && (npm run test:cypress:headless || true) && npm run test:report",
     "test:e2e": "npm install mocha mochawesome mochawesome-merge mochawesome-report-generator && node scripts/create-test-users.js && npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npx cypress run --reporter mochawesome --reporter-options \"reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss\" && npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json && kill $SERVER_PID",
-    "test:node-scripts": "echo 'Node.js tests converted to Cypress - use npm run test:cypress instead'",
     "test:reset-code": "node tests/test-send-reset-code-simple.js",
     "test:reset-code-full": "node tests/test-send-reset-code.js",
     "test:cypress": "npm install mocha mochawesome mochawesome-merge mochawesome-report-generator && node scripts/create-test-users.js && npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npx cypress run --reporter mochawesome --reporter-options \"reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss\" && npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json && kill $SERVER_PID",
-    "test:cypress:headless": "cypress run --headless",
+    "test:cypress:headless": "npm start & SERVER_PID=$! && npx wait-on http://localhost:4200 && npx cypress run --headless --reporter mochawesome --reporter-options \"reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss\" && kill $SERVER_PID",
     "test:cypress:open": "cypress open",
     "cypress:run": "cypress run --headless --reporter mochawesome --reporter-options reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss",
     "test:report": "node generate-test-report.js",
-    "test:scripts": "echo 'Node.js tests converted to Cypress - use npm run test:cypress instead'",
     "purge:css": "purgecss --config purgecss.config.js --output dist/docflow4/browser/",
     "purge:analyze": "purgecss --config purgecss.config.js --output dist/purged/",
     "css:analyze": "echo 'Analyzing CSS bundle sizes...' && find src -name '*.less' -exec wc -c {} + | sort -n",
