use ootb variables

--- a/.env
+++ b/.env
@@ -3,10 +3,8 @@
 AMPLIFY_BRANCH=dev001
 CDK_DEFAULT_ENV=dev001
 
-# AWS Amplify specific environment variables
-AMPLIFY_ENVIRONMENT_NAME=dev001
-AMPLIFY_BACKEND_NAME=dev001
-AWS_PROFILE=docflow4
+# AWS Branch variable (out-of-the-box)
+AWS_BRANCH=dev001
 
 # App configuration
 APP_NAME=docflow4
